k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: url2pdf
  name: url2pdf
  namespace: default
spec:
  minReadySeconds: 3
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: url2pdf
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: url2pdf
    spec:
      containers:
      - env:
        - name: EMAIL_ADDRESS
          valueFrom:
            secretKeyRef:
              key: EMAIL_ADDRESS
              name: email.address
        - name: EMAIL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: EMAIL_PASSWORD
              name: email.password
        image: gcr.io/url2pdf/url2pdf:latest
        imagePullPolicy: IfNotPresent
        name: url2pdf-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
