k8s/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "url2pdf-service"
  namespace: "default"
  labels:
    app: "url2pdf"
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"url2pdf-backendconfig"}}'
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "url2pdf"
    tier: "web"
  type: "NodePort"
